--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,8 @@ layout: default
 </div>
 
 <div id="content" class="container post" role="main">
-    <div id="post-content">{{ content }}<div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div></div>
+    <div id="post-content">{{ content }}</div>
+
     <div id="post-footer">
         {% assign author = site.authors | where: 'name', page.author | first %}
         <a id="post-author" href="{{ author.url }}">
@@ -37,12 +38,6 @@ layout: default
             <span>Read more posts by this author</span>
         </a>
     </div>
-    {% if page.comments != false and site.facebook_comment %}
-    <div id="post-comment">
-        <div class="fb-comments" data-href="{{ page.link }}" data-width="770px" data-numposts="5"></div>
-    </div>
-    {% endif %}
-
 </div>
 
 <div id="post-links" class="container">
