--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,15 +27,8 @@
             </a>
         </li>
     </ul>
-    <!--
-    <ul id="footer-menu">
-        <li><a href="//www.kakaocorp.com">Kakao</a></li>
-        <li><a href="//www.kakaocorp.com/recruit/currentOpportunities">Jobs</a></li>
-        <li><a href="//privacy.kakaocorp.com">Privacy</a></li>
-    </ul>
-    -->
     <p id="copyright">
-        <a href="https://tech.osci.kr">&copy; OpenSourceConsulting</a>
+        <a href="https://tech.osci.kr">&copy;2018 OpenSourceConsulting</a>
         All rights reserved.
     </p>
 </div><!--#footer-->
