Modify meta image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
 <meta property="og:title" content="{{ meta_title }}"/>
 <meta property="og:description" content="{{ meta_description }}"/>
 <meta property="og:url" content="{{ meta_url }}"/>
-<meta property="og:image" content="{{ meta_image }}"/>
+<meta property="og:image" content="{{ page.image }}"/>
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="{{ meta_title }}"/>
 <meta name="twitter:description" content="{{ meta_description }}"/>
