Adjust p tag css

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -841,7 +841,7 @@ body.tag-template #navbar {
 }
 
 #post-content p {
-    margin: 28px 0 0 0;
+    /* margin: 28px 0 0 0; */
 }
 
 #post-content ul,
