--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -379,6 +379,7 @@ for small screen(<720px):
     background-color: rgba(12, 12, 48, 0.3);
     overflow: hidden;
     z-index: 2;
+    padding: 0 10px 0 10px;
 }
 
 #cover h1, #cover p {
