--- a/_includes/facebook_sdk.html
+++ b/_includes/facebook_sdk.html
@@ -1,4 +1,4 @@
-<script>
+<!-- <script>
     window.fbAsyncInit = function() {
         FB.init({
             appId      : '{{ site.facebook.app_id }}',
@@ -20,7 +20,7 @@
         js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.8";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-</script>
+</script> -->
 
 <!--
 <script>
