--- a/_includes/google_plus_sdk.html
+++ b/_includes/google_plus_sdk.html
@@ -1,5 +1,5 @@
-<script src="https://apis.google.com/js/platform.js" async defer>
+<!-- <script src="https://apis.google.com/js/platform.js" async defer>
     {
         lang: 'ko'
     }
-</script>
+</script> -->
