--- a/_includes/twitter_sdk.html
+++ b/_includes/twitter_sdk.html
@@ -1,4 +1,4 @@
-<script>!function (d, s, id) {
+<!-- <script>!function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
         if (!d.getElementById(id)) {
             js = d.createElement(s);
@@ -7,4 +7,4 @@
             fjs.parentNode.insertBefore(js, fjs);
         }
     }(document, 'script', 'twitter-wjs');
-</script>
+</script> -->
